# zeroteam-one

./: .dockerignore  AGENTS.md  README.md  compose.yaml  example.env  example.env.production  pyproject.toml  railway.config  railway.json  requirements.txt
.devcontainer/: compose.override.yaml  compose.override.yml  devcontainer.json
agents/: agno_support.py  code_search.py  thinking_partner.py  web_search.py
api/: __init__.py  actors.py  deps.py  router.py  schemas.py  tasks.py
app/: config.yaml  guardrails.py  main.py  settings.py
db/: __init__.py  composite_knowledge.py  knowledge_bases.py  knowledge_context_provider.py  session.py  url.py
docs/: MCP_CONNECT.md  SLACK_CONNECT.md  create-new-agent.md  eval-and-improve.md  improve-agent.md  run-evals.md
evals/: __main__.py  auto_improve.py  cases.py
project-docs/: agentic-ai-starter-program.md  app-architecture.md  custom-agent-docs.md  designing-incentive-surface.md  example-knowledge-agentos.py.md  example-knowledge-chunking.md  frontend-chat-setup.md  lab-fixes-v1.md  post-hook-no-meta-commentary.md  reranking-implementation.md  studio-knowledge-bases-implementation.md  thinking-partner-behaviour-instructions.md  vs-code-team-for-agno-dev.md  vscode-agent-design.md
prompts/: __init__.py  thinking_partner_instructions.py
scripts/: entrypoint.sh  format.sh  generate_requirements.sh  ingest_documents.py  ingest_knowledge.py  railway_redeploy.sh  railway_up.sh  venv_setup.sh
tasks/: __init__.py  db.py  domain.py  enums.py  models.py  repository.py  state_machine.py
teams/: engineering_team.py
(+537 files in other folders)
