[project]
name = "agent-platform"
version = "1.0.0"
description = "Agent platform with Postgres and AgentOS."
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno[os,slack]",
  "beautifulsoup4",
  "cohere",
  "fastapi[standard]",
  "mcp",
  "ollama",
  "openai",
  "parallel-web",
  "pgvector",
  "python-docx",
  "redis",
  "psycopg[binary]",
  "pypdf",
  "sqlalchemy",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest>=8.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "app*", "api*", "db*", "evals*", "tasks*"]

[tool.ruff]
line-length = 120
exclude = [".venv*", "agno/source"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*", "agno/source"]

[[tool.mypy.overrides]]
module = [
  "pgvector.*",
  "agno.*",
  "httpx.*",
  "mcp.*",
  "sqlalchemy.*",
  "fastapi.*",
  "pytest.*",
]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
